src/objects/HRB_Report__c.object
<CustomObject>
    <description>Used to select the range and type of HRB Report</description>
    <fields>
        <fullName>Period__c</fullName>
        <inlineHelpText>Select the period for the report</inlineHelpText>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Complete Year</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_report__c</fullName>
        <label>Type of report</label>
        <picklist>
            <picklistValues>
                <fullName>Clients who entered during the report period</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Only clients who entered before the reporting period and exited during the report period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Enter a four digit year (e.g. 2011)</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HRB Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Period__c</columns>
        <columns>Year__c</columns>
        <columns>Type_of_report__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HRB-{000}</displayFormat>
        <label>HRB Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRB Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>